# FemtoFitter

./: .gitignore  .gitmodules  .rootlogon.C  CMakeLists.txt  Linkdef.h  Makefile  README.rst  Run.C  Symmetrize.C  bwalk  fit-quick.py  fit.py  fitter.py  fitterz.py  fitz.py  mrcmap.yaml  plotter.py  r.py  setup.cfg  tmp.fthr
bindings/python/: setup.cfg  setup.py
bindings/python/femtofitter/: __init__.py
femtofitter/: CMakeLists.txt  Linkdef.h  MomentumCorrector.hpp  __init__.py  fit.py  fit1d.py  fitspec.py  plotting.py  pyfit.py  pyfitter.py  pyfsi.py
femtofitter/coulomb/: CoulombCalc.hpp
femtofitter/data/: DataToFit.cpp  DataToFit.hpp  DataTypes.hpp
femtofitter/fit-estimate/: Estimator.hpp
femtofitter/fitter/: Fitter1D.hpp  Fitter1DGauss.cpp  Fitter1DGauss.hpp  Fitter1DGaussLin.hpp  Fitter1DGaussPolyBg.hpp  Fitter1DGaussPolybg.hpp  Fitter1DLevy.hpp  Fitter1DLevyLin.hpp  Fitter1DLevyPolyBg.hpp  Fitter1DLinGauss.hpp  Fitter3D.hpp  Fitter3DGaussFull.hpp  Fitter3DGaussLcms.hpp  Fitter3DGaussLcmsOL.hpp  Fitter3DGaussLcmsOS.hpp  Fitter3DLevy.hpp  Fitter3DLevyFull.hpp  FitterGauss1D.cpp  FitterGauss1D.hpp  FitterGauss3DLcmsOL.hpp  FitterGauss3DLcmsOS.hpp  FitterGaussFull.hpp  FitterGaussOSL.hpp  FitterGaussOSL3.hpp  FitterLevy1D.hpp  FitterLevy3D.hpp  FitterLevyFull.hpp  Gauss1D.hh  Gauss3D.hh  Gauss3Dalt1.hh  Levy1D.hh  Levy3D.hh  fit-methods.hh
femtofitter/fsi/: Fsi.hpp  FsiGamov.hpp  FsiKFile.cpp  FsiKFile.hpp  FsiPrecalc.hpp  FsiStatic.hpp  FsiTest.hpp
femtofitter/inc/: femtofitter.h  femtomath.h  fitter.h  value.hpp
femtofitter/math/: constants.hh  fit.hh  interpolator.hpp
femtofitter/mrc/: MomentumCorrector.hpp  MomentumResolutionCorrector.cxx  MomentumResolutionCorrector.hpp  Mrc.cpp  Mrc.hpp  Mrc1DMatrix.hpp  Mrc1DRatio.hpp  Mrc1DRatioMixed.hpp  Mrc3DHypercube.cpp  Mrc3DHypercube.hpp  Mrc3DRatio.hpp  Mrc3DRatioMixed.hpp  MrcHypercube3D.cpp  MrcHypercube3D.hpp  MrcMatrix1D.hpp  MrcRatio1D.hpp  MrcRatio3D.hpp  MrcTransform1D.hpp  README.rst
femtofitter/plotting/: __init__.py  plotdata.py  plotz.py  systematics.py
femtofitter/src/: CalculatorFsi.hpp  CalculatorResid.hpp  CoulombHist.hpp  Data1D.cpp  Data1D.hpp  Data3D.cpp  Data3D.hpp  DataIterator3D.hpp  FitRunner.hpp  Fitter.cpp  Fitter.hpp  Fitter1D.hpp  Fitter3D.hpp  FitterGaussFull.hpp  FitterGaussOSL.hpp  FitterLevy.hpp  FitterLevyFull.hpp  HistCache.hpp  MinimizerMinuit.cpp  MinimizerMinuit.hpp  MinuitFitter.cpp  MinuitFitter.hpp  ParamHints.cpp  ParamHints.hpp  PythonInterface.hh  Value.cpp  Value.hpp  fitter.cxx  math.hpp  value.hpp
macros/: BayesianWalk.C  BayesianWalk.cpp  runit.C
notebooks/: PyFit.ipynb  plot1d.py  plots.py  plotz.py  prelude.py
src/: CoulombHist.cpp  CoulombHist.hpp  Data1D.cpp  Data1D.hpp  Data3D.cpp  Data3D.hpp  Fitter.cpp  Fitter.hpp  Fitter3D.hpp  FitterGaussFull.hpp  FitterGaussOSL.hpp  FitterLevy.hpp  FitterLevyFull.hpp  FitterTraits.hpp  math.hpp
tests/: test_Fitter3D.py  test_coulomb.py  test_python.py
