

[metadata]
name = femtofitter
description = Python bindings to a Femtoscopy fitter package
keywords =
    physics
    fitting
    femtoscopy
    analysis
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Natural Language :: English
    License :: OSI Approved

[options]
package
install_requires =
    numpy
    scipy
    stumpy: git+https://gitlab.cern.ch/akubera/stumpy
